--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "naukri": "node src/naukri-auto.js"
+    "naukri": "node src/naukri-auto.js",
+    "save linkedin": "node src/session/save-session-linkedin.js",
+    "start": "node src/index.js"
   },
   "keywords": [],
   "author": "",
