--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "naukri": "node src/naukri-auto.js",
-    "save linkedin": "node src/session/save-session-linkedin.js",
+    "save-linkedin": "node src/session/save-session-linkedin.js",
     "start": "node src/index.js"
   },
   "keywords": [],
