--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "naukri": "node src/naukri-auto.js",
     "save-linkedin": "node src/session/save-session-linkedin.js",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "process-jobs": "node src/process-extracted-jobs.js",
+    "start-pipeline": "node src/pipeline.js"
   },
   "keywords": [],
   "author": "",
